Add gatsby plugin for sitemap and netlify

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "gatsby-link": "^1.6.28",
     "gatsby-plugin-catch-links": "^1.0.13",
     "gatsby-plugin-google-tagmanager": "^1.0.10",
+    "gatsby-plugin-netlify": "^1.0.9",
     "gatsby-plugin-preact": "^1.0.13",
     "gatsby-plugin-react-helmet": "^1.0.8",
+    "gatsby-plugin-sitemap": "^1.2.6",
     "gatsby-plugin-styled-components": "^2.0.3",
     "gatsby-plugin-typography": "^1.7.10",
     "gatsby-remark-prismjs": "^1.2.10",
